# fortune-api

./: .dockerignore  .gitignore  Dockerfile  README.md  config.ini  pyproject.toml  requirements.txt
.github/workflows/: pythonapp.yml
src/lfortune_api/restapi/: app.py  functions.py  local.py
